--- a/analysis/pilot_performance_comparison.ipynb
+++ b/analysis/pilot_performance_comparison.ipynb
@@ -10,13 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -64,13 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -128,41 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The following object is masked from file:~/Project/Alz/multi_susie_pilot/mv_cv.RData (pos = 3):\n",
-      "\n",
-      "    output\n",
-      "\n",
-      "\n",
-      "The following object is masked from file:~/Project/Alz/multi_susie_pilot/mv_cv.RData (pos = 4):\n",
-      "\n",
-      "    output\n",
-      "\n",
-      "\n",
-      "The following object is masked from file:~/Project/Alz/multi_susie_pilot/mv_cv.RData (pos = 5):\n",
-      "\n",
-      "    output\n",
-      "\n",
-      "\n",
-      "The following object is masked from file:~/Project/Alz/multi_susie_pilot/mv_cv.RData (pos = 6):\n",
-      "\n",
-      "    output\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "total = attach(\"~/Project/Alz/multi_susie_pilot/mv_cv.RData\")$output \n",
     "susie_data = total%>%select(-path)%>%mutate( \n",
@@ -188,13 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -230,6 +183,15 @@
     "    pcnt_r2_win = map_dbl(sum_data, ~.x%>%pull(r2_more)%>%na.omit%>%mean()  ),\n",
     "    pcnt_both_win = map_dbl(sum_data, ~.x%>%filter(both_win )%>%nrow()/nrow(.x) )\n",
     "    )%>%select(-twas_gene,-idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_data%>%saveRDS(\"~/merged_dat.RDS\")"
    ]
   },
   {
