--- a/workflow/complete_mv_susie_workflow.ipynb
+++ b/workflow/complete_mv_susie_workflow.ipynb
@@ -305,13 +305,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb plot_U \\\n",
     "        --model_data /home/hs3163/Project/Genome_prior/mixture_prior/output/susie.ed.rds \\\n",
     "        --name \"\"  \\\n",
     "        --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "        --tol \"0.06\"  \\\n",
     "        --cwd /home/hs3163/Project/Genome_prior/mixture_prior/output/ \\\n",
     "        -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
    ]
@@ -353,6 +356,35 @@
     "kernel": "SoS"
    },
    "source": [
+    "### Removing the genes whithout overlapping snvs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "bash: cd /mnt/mfs/statgen/neuro-twas/whole_genome_0504/cache\n",
+    "      ls *.bed > keep\n",
+    "R:\n",
+    "    library(readr)\n",
+    "    library(dplyr)\n",
+    "    library(tibble)\n",
+    "    list = read.table(\"./keep\",sep = \".\")\n",
+    "    gene_list = read_delim(\"/mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list_final\",delim = \"\\t\")\n",
+    "    gene_list = gene_list%>%filter(`#region` %in% list$V2 )\n",
+    "    gene_list%>%write_delim(\"wg_rds_list_final\",delim = \"\\t\")    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
     "### Weight estimation With three types of mixture prior"
    ]
   },
@@ -364,7 +396,7 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie \\\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/workflow/mv_susie.ipynb mv_susie \\\n",
     "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
     "--region_list /mnt/mfs/statgen/neuro-twas/whole_genome_0504/wg_rds_list_final \\\n",
     "--wd \"/mnt/mfs/statgen/neuro-twas/whole_genome_0504/\" \\\n",
@@ -372,8 +404,9 @@
     "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "--impute TRUE --job_size 1 \\\n",
     "--cv_times 100 \\\n",
-    "--mixture_prior '/home/hs3163/Project/Genome_prior/mixture_prior/output/susie.ed.rds' \\\n",
-    "-J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
+    "--mixture_prior '/home/hs3163/Project/Genome_prior/mixture_prior/output/susie.teem.rds' \\\n",
+    "--extract_snp \"~/Project/Alz/data/AD_sumstats_SNP\" \\\n",
+    "-J 200 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml -s build &\n",
     "\n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie \\\n",
     "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
@@ -415,10 +448,39 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\\n",
-    "--molecular_pheno_dir mole_pheno_ls   --region_list wg_rds_list_final  --wd ./ \\\n",
-    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "--impute TRUE --cv_times 2  &"
+    "nohup sos run /home/hs3163/GIT/neuro-twas/workflow/mv_susie.ipynb fusion_tf \\\n",
+    "--molecular_pheno_dir /mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list   --region_list /mnt/mfs/statgen/neuro-twas/whole_genome_0504/wg_rds_list_final \\\n",
+    "--wd /mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list_final \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--extract_snp \"~/Project/Alz/data/AD_sumstats_SNP\" \\\n",
+    "--impute TRUE --cv_times 2  &\n",
+    "\n",
+    "\n",
+    "\n",
+    "nohup sos dryrun /home/hs3163/GIT/neuro-twas/workflow/mv_susie.ipynb fusion_tf \\\n",
+    "--molecular_pheno_dir /mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list   \\\n",
+    "--region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "--wd /mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list_final \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--extract_snp \"~/Project/Alz/data/AD_sumstats_SNP\" \\\n",
+    "--impute TRUE --cv_times 2  &\n",
+    "\n",
+    "\n",
+    "\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/workflow/mv_susie.ipynb fusion_tf \\\n",
+    "--molecular_pheno_dir /mnt/mfs/statgen/neuro-twas/whole_genome_0504/molecular_phenotype_list \\\n",
+    "--region_list /mnt/mfs/statgen/neuro-twas/whole_genome_0504/wg_rds_list_test \\\n",
+    "--wd /mnt/mfs/statgen/neuro-twas/whole_genome_0504/ \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--extract_snp \"~/Project/Alz/data/AD_sumstats_SNP\" --impute TRUE \\\n",
+    "--cv_times 2 &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -438,58 +500,60 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "wd=\"whole_genome_0504\"\n",
+    "\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/workflow/twas_fusion.ipynb association_test  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/$wd/wgt/DLPFC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
     "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
     "  --window 500000 \\\n",
-    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC \\\n",
-    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC/All_wgt_list.txt \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/$wd/wgt/DLPFC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/$wd/wgt/DLPFC/All_wgt_list.txt \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "  --job_size 1\\\n",
     "  --max_impute 1\\\n",
     "  --asso_mem \"50G\" \\\n",
-    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml &\n",
     "  -s build &\n",
     "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "nohup sos run ~/GIT/neuro-twas/workflow/twas_fusion.ipynb association_test  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/$wd/wgt/PCC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
     "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
     "  --window 500000 \\\n",
-    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC \\\n",
-    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC/All_wgt_list.txt \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/$wd/wgt/PCC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/$wd/wgt/PCC/All_wgt_list.txt \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "  --job_size 1\\\n",
     "  --max_impute 1\\\n",
     "  --asso_mem \"50G\" \\\n",
-    "  -J 40 -q neurology -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml \\\n",
     "  -s build &\n",
     "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/workflow/twas_fusion.ipynb association_test  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/$wd/wgt/AC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
     "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
     "  --window 500000 \\\n",
-    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC \\\n",
-    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC/All_wgt_list.txt \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/$wd/wgt/AC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/$wd/wgt/AC/All_wgt_list.txt \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "  --job_size 1\\\n",
     "  --max_impute 1\\\n",
     "  --asso_mem \"50G\" \\\n",
-    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml \\\n",
     "  -s build &"
    ]
   }
@@ -517,7 +581,7 @@
      ""
     ]
    ],
-   "version": "0.22.3"
+   "version": "0.20.1"
   }
  },
  "nbformat": 4,
