--- a/workflow/mixture_prior.ipynb
+++ b/workflow/mixture_prior.ipynb
@@ -495,7 +495,7 @@
     "parameter: max_comp = -1\n",
     "# whether or not to convert to correlation\n",
     "parameter: to_cor = False\n",
-    "parameter: tol = \"1E-6\"\n",
+    "parameter: tol = \"0.05\"\n",
     "parameter: remove_label = False\n",
     "input: model_data\n",
     "output: f'{cwd:a}/{_input:bn}{(\"_\" + name.replace(\"$\", \"_\")) if name != \"\" else \"\"}.pdf'\n",
@@ -512,9 +512,9 @@
     "          rownames(lat) = NULL\n",
     "        }\n",
     "        return(lattice::levelplot(lat[n:1,],col.regions = clrs,\n",
-    "                                xlab = \"\",ylab = \"\", main=title,\n",
+    "                                xlab = \"\",ylab = \"\", main= list(label= title,side=1,line=0.5, cex= 2),\n",
     "                                colorkey = TRUE,at = seq(-1,1,length.out = 128),\n",
-    "                                scales = list(cex = 0.6,x = list(rot = 45))))\n",
+    "                                scales = list(cex = 1.5 )))\n",
     "    }\n",
     "  \n",
     "    dat = readRDS(${_input:r})\n",
@@ -531,12 +531,13 @@
     "    meta = head(meta[order(meta[,2], decreasing = T),], ${max_comp if max_comp > 1 else \"nrow(meta)\"})\n",
     "    message(paste(n_comp, \"components out of\", length(dat$w), \"total components have weight greater than\", tol))\n",
     "    res = list()\n",
+    "    factor\n",
     "    for (i in 1:n_comp) {\n",
-    "        title = paste(meta$U[i], \"w =\", round(meta$w[i], 6))\n",
+    "        title = paste(\"Factor\", i , \"w =\", round(meta$w[i], 6))\n",
     "        res[[i]] = plot_sharing(dat$U[[meta$U[i]]], to_cor = ${\"T\" if to_cor else \"F\"}, title=title, remove_names = ${\"TRUE\" if remove_label else \"FALSE\"})\n",
     "    }\n",
-    "    unit = 4\n",
-    "    n_col = 5\n",
+    "    unit = 5\n",
+    "    n_col = 2\n",
     "    n_row = ceiling(n_comp / n_col)\n",
     "    pdf(${_output:r}, width = unit * n_col, height = unit * n_row)\n",
     "    do.call(gridExtra::grid.arrange, c(res, list(ncol = n_col, nrow = n_row, bottom = \"Data source: readRDS(${_input:br})${('$'+name) if name else ''}\")))\n",
