--- a/workflow/mv_susie.ipynb
+++ b/workflow/mv_susie.ipynb
@@ -302,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "sos run ../../GIT/freshcopy/neuro-twas/Workflow/mv_susie.ipynb fusion_tf_cv \\\n",
@@ -317,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\ \n",
@@ -426,7 +430,7 @@
     "output: f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged_list',\n",
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.bed',\n",
     "        f'{wd:a}/cache/{name_prefix}.{_regions[0]}.merged.exp'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'  \n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '60G', tags = f'{step_name}_{_output[0]:bn}'  \n",
     "\n",
     "R: expand = \"$[ ]\", stderr = f'{_output[2]}.stderr', stdout = f'{_output[2]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
@@ -457,7 +461,6 @@
     "\n",
     "\n",
     "bash: expand = \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
-    "\n",
     "    # create the merged output X\n",
     "    plink --bfile '$[next(iter(molecular_pheno[0]))]/cache/$[name_prefix].$[_regions[0]]'\\\n",
     "          --merge-list $[_output[0]] \\\n",
@@ -470,7 +473,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "## Performed MV susie\n",
     "This step filtered out some of the snvs that are deemed worthless"
@@ -479,14 +484,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "[snp_exclude_2]\n",
     "parameter: bed_list = path\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output: f'{wd:a}/cache_snp/{name_prefix}.{_regions[0]}.merged.bed'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '10G', tags = f'{step_name}_{_output[0]:bn}'  \n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'  \n",
     "bash: expand = \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    # create the merged output X\n",
     "    plink --bfile $[_input[1]:n] \\\n",
@@ -520,14 +527,14 @@
     "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.transformed_XY.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.mv_wgt.txt'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '30G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
     "    library(\"plink2R\")\n",
     "    library(\"mashr\")\n",
-    "    library(\"mmbr\")  \n",
+    "    library(\"mvsusieR\")  \n",
     "    library(\"flashier\")\n",
     "    library(\"modelr\")\n",
     "    # Define functions\n",
@@ -625,14 +632,14 @@
     "    prior_covar <- create_mash_prior(mixture_prior = list( weights = mx_prior$w, matrices = mx_prior$U))\n",
     "    }\n",
     "   \n",
-    "    m_$[_regions[0]] = msusie(X_$[_regions[0]], \n",
+    "    m_$[_regions[0]] = mvsusie(X_$[_regions[0]], \n",
     "                Y_$[_regions[0]], \n",
     "                L=10, \n",
     "                prior_variance=prior_covar,\n",
     "                residual_variance = Y_$[_regions[0]]_cov,\n",
     "                precompute_covariances = TRUE)\n",
     " \n",
-    "    #Add a hsq sub for the msusie object\n",
+    "    #Add a hsq sub for the misuse object\n",
     "    hsq_$[_regions[0]]=rep(0,ncol(Y_$[_regions[0]]))\n",
     "    for (i in 1:ncol(Y_$[_regions[0]])){\n",
     "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]])[,i])/var(Y_$[_regions[0]][,i]%>%na.omit())}\n",
@@ -660,21 +667,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "[mv_susie_cv_3,cv]\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[0]:bn}.cv.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.cv_diag.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '8G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
     "    library(\"plink2R\")\n",
     "    library(\"mashr\")\n",
-    "    library(\"mmbr\")  \n",
+    "    library(\"mvsusieR\")  \n",
     "    library(\"flashier\")\n",
     "    library(\"purrr\")\n",
     "    library(\"modelr\")\n",
@@ -819,10 +828,10 @@
     "        create_mash_prior(sample_data = list( X = first, Y = second, residual_variance = third, max_mixture_len =-1,center =F,scale =F)\n",
     "        ))) ,\n",
     "        \n",
-    "    ## Do msusie\n",
+    "    ## Do mvsusie\n",
     "    \n",
-    "      msusie = pmap(list(train_X,train_Y,cov,prior),function(first,second,third,forth)(\n",
-    "        msusie(first,second, L=10, prior_variance = forth,residual_variance = third,precompute_covariances = TRUE)\n",
+    "      mvsusie = pmap(list(train_X,train_Y,cov,prior),function(first,second,third,forth)(\n",
+    "        mvsusie(first,second, L=10, prior_variance = forth,residual_variance = third,precompute_covariances = TRUE)\n",
     "        ))\n",
     "        \n",
     "        )} else {\n",
@@ -833,17 +842,17 @@
     "       \n",
     "       cv_df = cv_df%>%mutate(\n",
     "        \n",
-    "    ## Do msusie\n",
+    "    ## Do mvsusie\n",
     "    \n",
-    "      msusie = pmap(list(train_X,train_Y,cov),function(first,second,third)(\n",
-    "        msusie(first,second, L=10, prior_variance = prior_covar,residual_variance = third,precompute_covariances = TRUE)\n",
+    "      mvsusie = pmap(list(train_X,train_Y,cov),function(first,second,third)(\n",
+    "        mvsusie(first,second, L=10, prior_variance = prior_covar,residual_variance = third,precompute_covariances = TRUE)\n",
     "        )))\n",
     "    }\n",
     "    # Extract data \n",
     "    \n",
     "    cv_df = cv_df%>%mutate(\n",
-    "      weight = map(msusie,~.x$coef),\n",
-    "      test_fitted = map2(msusie,test_X,~predict.mmbr(.x,.y)),\n",
+    "      weight = map(mvsusie,~.x$coef),\n",
+    "      test_fitted = map2(mvsusie,test_X,~predict.mvsusie(.x,.y)),\n",
     "      rmse = map2(test_Y,test_fitted,~compute_rmse(.x,.y)),\n",
     "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y)),\n",
     "      r2_raw = map2(test_Y,test_fitted,~compute_r2_raw(.x,.y)),\n",
@@ -899,7 +908,7 @@
     "[mv_susie_3]\n",
     "input: group_by = \"all\"\n",
     "output:  f'{wd:a}/mv.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_output:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -923,13 +932,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "[mv_susie_cv_4]\n",
     "input: group_by = \"all\"\n",
     "output:  f'{wd:a}/mv_cv.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_output:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -952,7 +963,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "## Fusion transformed\n",
     "These step seperate the output from the previous step into the wgt file for each tissues that can be input to the Fusion Association testing pipeline"
@@ -961,7 +974,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [
     {
      "ename": "ERROR",
@@ -977,7 +992,7 @@
     "[fusion_tf_cv_1]\n",
     "input:  molecular_pheno_dir,for_each = 'regions'\n",
     "output: dynamic(f'{wd:a}/wgt/*/{name_prefix}.{_regions[0]}.mv.wgt.RDat')\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_index}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_index}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_input[0]}.split.stderr', stdout = f'{_input[0]}.split.stderr',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"plink2R\")\n",
@@ -1033,14 +1048,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "# Create wgs.RDat file\n",
     "[fusion_tf_1]\n",
     "input:  molecular_pheno_dir,for_each = 'regions'\n",
     "output: dynamic(f'{wd:a}/wgt/*/{name_prefix}.{_regions[0]}.mv.wgt.RDat')\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_index}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_index}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_input[0]}.split.stderr', stdout = f'{_input[0]}.split.stderr',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"plink2R\")\n",
@@ -1051,6 +1068,8 @@
     "    genos = read_plink('$[wd:a]/cache/$[name_prefix].$[_regions[0]].merged')\n",
     "    molecular_pheno = read_delim('$[_input[0]]',delim = '\\t')\n",
     "    full_model = attach('$[wd:a]/result/$[name_prefix].$[_regions[0]].mv_susie.model.RData')$m_$[_regions[0]]\n",
+    "    X_dat = attach('$[wd:a]/result/$[name_prefix].$[_regions[0]].transformed_XY.RData')$scaled_$[_regions[0]]\n",
+    "    X_snps = colnames(X_dat[[1]])\n",
     "    #Get all the components\n",
     "    pval = NA\n",
     "    rsq = NA\n",
@@ -1061,7 +1080,7 @@
     "    pval = pval\n",
     "    )\n",
     "    ## Filter out the snps that are not in the bim for consistancy\n",
-    "    snps = genos$bim%>%filter(V2 %in%full_model$snps )\n",
+    "    snps = genos$bim%>%filter(V2 %in% X_snps )\n",
     "    \n",
     "    # Create output for each tissue saperately\n",
     "\n",
@@ -1093,14 +1112,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "[fusion_tf_cv_2]\n",
     "molecular_pheno = [x.strip().split(\"/\") for x in open(molecular_pheno_dir).readlines() if x.strip() and not x.strip().startswith('#')]\n",
     "input: region_list, for_each = \"molecular_pheno\"\n",
     "output: f'{wd:a}/wgt/{_molecular_pheno[1]}/All_wgt_list.txt'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_index}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_index}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -1122,14 +1143,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "[fusion_tf_2]\n",
     "molecular_pheno = [x.strip().split(\"/\") for x in open(molecular_pheno_dir).readlines() if x.strip() and not x.strip().startswith('#')]\n",
     "input: region_list, for_each = \"molecular_pheno\"\n",
     "output: f'{wd:a}/wgt/{_molecular_pheno[1]}/All_wgt_list.txt'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_index}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '60G', tags = f'{step_name}_{_index}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -1147,21 +1170,39 @@
     "    )%>%select(WGT,ID = `#region`,CHR = chr, P0 = start_position, P1 = end_position)\n",
     "    res%>%write_delim(\"$[_output]\",delim = \"\\t\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "SoS",
+   "language": "sos",
+   "name": "sos"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "3.6.3"
+   "codemirror_mode": "sos",
+   "file_extension": ".sos",
+   "mimetype": "text/x-sos",
+   "name": "sos",
+   "nbconvert_exporter": "sos_notebook.converter.SoS_Exporter",
+   "pygments_lexer": "sos"
   },
   "sos": {
    "kernels": [
