--- a/workflow/twas_fusion.ipynb
+++ b/workflow/twas_fusion.ipynb
@@ -528,7 +528,7 @@
     "output: f'{weights_path}/{_input[0]:bn}.wgt.RDat'\n",
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '24h',  mem = '40G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container\n",
     "    FUSION.compute_weights.R \\\n",
     "    --bfile $[_input[0]:n] \\\n",
@@ -543,6 +543,15 @@
     "    ## Creat dummy output file that will be deleted next step\n",
     "    touch $[_output]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -570,7 +579,7 @@
     "regions_dict = dict([(x[3], (x[0], x[1], x[2])) for x in regions])\n",
     "res = [[\"WGT\", \"ID\",\"CHR\",\"P0\",\"P1\",\"Heritability\",\"Heritability_SE\",\"Heritability_LRT_P_val\"]]\n",
     "for item in weight_files:\n",
-    "    name = f'{item:bnn}'.lstrip(f'.{molecular_pheno:bn}')\n",
+    "    name = f'{item:bnn}'.replace(f'{molecular_pheno:bn}.','')\n",
     "    hsq = open(f\"{item:nn}.hsq\").read().strip().split()\n",
     "    res.append([str(item),name,regions_dict[name][0], regions_dict[name][1], regions_dict[name][2], hsq[1], hsq[2], hsq[3]])\n",
     "with open(_output, 'w') as f:\n",
@@ -706,7 +715,7 @@
      "sos"
     ]
    ],
-   "version": "0.22.3"
+   "version": "0.20.1"
   }
  },
  "nbformat": 4,
