--- a/workflow/uni_susie.ipynb
+++ b/workflow/uni_susie.ipynb
@@ -462,7 +462,13 @@
     "    }\n",
     "\n",
     "    \n",
-    "\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/workflow/mv_susie.ipynb fusion_tf \\\n",
+    "--molecular_pheno_dir /mnt/mfs/statgen/neuro-twas/whole_genome_0504/molecular_phenotype_list \\\n",
+    "--region_list /mnt/mfs/statgen/neuro-twas/whole_genome_0504/wg_rds_list_final \\\n",
+    "--wd /mnt/mfs/statgen/neuro-twas/whole_genome_0504/ \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--extract_snp \"~/Project/Alz/data/AD_sumstats_SNP\" --impute TRUE --cv_times 2 &\n",
     "\n",
     "\n"
    ]
@@ -822,6 +828,38 @@
    "source": [
     "## Save output\n",
     "This step create the all_hsq.txt file to summarize the susie result and create a R object to host all the susieR models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Saved selected susie object into one RData\n",
+    "[condense]\n",
+    "input: group_by = \"all\"\n",
+    "output:f'{wd:a}/susie/all_hsq.txt',\n",
+    "       f'{wd:a}/susie.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '20G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"purrr\")\n",
+    "    # Load a template\n",
+    "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
+    "    # get the path\n",
+    "    dir = \"$[_input[0]:d]/\"\n",
+    "    pre = \"$[_input[0]:bnnnnn]\"\n",
+    "    sur = \".susie.model.RData\"\n",
+    "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
+    "    # Load the data\n",
+    "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
+    "                             model = map(env, ~.x$fitted1))\n",
+    "    # Save the combined output\n",
+    "    save(output,file = \"$[_output[1]]\")"
    ]
   },
   {
